selfhost/test/typechecker/array/error_type_mismatch_item.2.out
Error at %FILE_NAME%:1:11
Type mismatch
  |  [[1, 2], ["3", "4"]]
               ^
Expected: Int
but instead found: String
